fixing input field zoom by changing text size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 html {
     scroll-behavior: smooth;
-    scroll-padding-top: 59px;
+    scroll-padding-top: 69px;
 }
 
 .website {
